Major refactor (#13)
The idea is to have packages by the endpoint name.